[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
authors = [
    {name = "Timothy Cameron", email = "timiancam@outlook.com"},
]
version = "0.1"
description = "My package description"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["one", "two"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved LL MIT License",
]
dynamic = ["version"]

[project.urls]
"repository" = "https:://github.com/timiancam/python_package_template"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
