[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my_package"
authors = ["Timothy Cameron <timiancam@gmail.com>"]
version = "0.1"
description = "My package description"
readme = "README.md"
keywords = ["one", "two"]
license = "MIT"
repository = "https:://github.com/timiancam/python_package_template"
packages = [
    { include = "my_package" },
]

[tool.poetry.dependencies]
python = ">=3.11"

# ... other project metadata fields as specified in:
#       https://python-poetry.org/docs/pyproject/
